fix the twitter icon issue on Safari

--- a/assets/_sass/partials/home.scss
+++ b/assets/_sass/partials/home.scss
@@ -72,7 +72,7 @@
             margin: 80px 25px 0;
 
             &:first-of-type {
-                margin: 0 25px 0 0;
+                margin: 80px 25px 0 0;
             }
 
             i {
